[gd_scene load_steps=22 format=3 uid="uid://cuv4vme4rwno0"]

[ext_resource type="Script" uid="uid://5f7iwrxydbco" path="res://scripts/game_manager.gd" id="1_l4ihi"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_nlliu"]
[ext_resource type="PackedScene" uid="uid://bgv5v2fxqlswe" path="res://scenes/platform.tscn" id="3_cmfc3"]
[ext_resource type="PackedScene" uid="uid://d2w2i5h0lhc6l" path="res://scenes/slime.tscn" id="6_l0s6b"]
[ext_resource type="PackedScene" uid="uid://cnwp5683pkh5h" path="res://assets/goatboy/Goatboy.tscn" id="8_vtaks"]
[ext_resource type="Script" uid="uid://3pfi26k0t3kk" path="res://scripts/player.gd" id="9_kvpfn"]
[ext_resource type="Script" uid="uid://daecrtd28qh2c" path="res://scenes/path_generator.gd" id="11_kvpfn"]
[ext_resource type="Script" uid="uid://2gc1c1kxhts6" path="res://scenes/path_renderer.gd" id="12_dinhu"]
[ext_resource type="Texture2D" uid="uid://dsd8hu8u5hymh" path="res://assets/sprites/8x1 surface.png" id="13_kvuet"]
[ext_resource type="Texture2D" uid="uid://tl8mlk7ychla" path="res://assets/sprites/8x1 surface leftEnd.png" id="14_ca42v"]
[ext_resource type="PackedScene" uid="uid://dtgoieb78hhf3" path="res://assets/scenes/shroom_lvl_2.tscn" id="14_ir15t"]
[ext_resource type="Script" uid="uid://b8t5ufck200sx" path="res://scenes/path_colliders.gd" id="14_trtic"]
[ext_resource type="PackedScene" uid="uid://dc1dau4up7k24" path="res://assets/scenes/shroom_lvl_1.tscn" id="15_ir15t"]
[ext_resource type="Texture2D" uid="uid://bej6av7agfunr" path="res://assets/sprites/8x1 surface rightEnd.png" id="15_rysoc"]
[ext_resource type="Script" uid="uid://b6wliaxvgfeyb" path="res://path_analyzer.gd" id="16_264po"]

[sub_resource type="Animation" id="Animation_apgth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(370, 52)]
}

[sub_resource type="Animation" id="Animation_bm7kf"]
resource_name = "move"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(370, 52), Vector2(462, 52)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuk5v"]
_data = {
&"RESET": SubResource("Animation_apgth"),
&"move": SubResource("Animation_bm7kf")
}

[sub_resource type="Curve2D" id="Curve2D_264po"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1000.89, 0, 0, 0, 0, 0, 1215.43, 76.4684, 0, 0, 0, 0, 1217.69, 153.83, 0, 0, 0, 0, 1202.39, 229.369, 0, 0, 0, 0, 1174.73, 301.62, 0, 0, 0, 0, 1138.07, 369.781, 0, 0, 0, 0, 1026.23, 406.311, 0, 0, 0, 0, 995.594, 468.491, 0, 0, 0, 0, 970.543, 533.561, 0, 0, 0, 0, 948.314, 601.818, 0, 0, 0, 0, 921.54, 669.538, 0, 0, 0, 0, 947, 783.426, 0, 0, 0, 0, 893.452, 839.008, 0, 0, 0, 0, 830.401, 884.287, 0, 0, 0, 0, 762.395, 921.578, 0, 0, 0, 0, 646.996, 890.514, 0, 0, 0, 0, 586.927, 924.849, 0, 0, 0, 0, 530.275, 964.566, 0, 0, 0, 0, 474.671, 1008.73, 0, 0, 0, 0, 416.7, 1052.46, 0, 0, 0, 0, 352.44, 1084.7, 0, 0, 0, 0, 303.43, 1181.78, 0, 0, 0, 0, 226.369, 1186.67, 0, 0, 0, 0, 149.147, 1180.62, 0, 0, 0, 0, 73.8408, 1173.67, 0, 0, 0, 0, -1.23965e-13, 770.855, 0, 0, 0, 0, -48.7586, 774.995, 0, 0, 0, 0, -99.0425, 784.002, 0, 0, 0, 0, -151.507, 794.227, 0, 0, 0, 0, -203.755, 793.575, 0, 0, 0, 0, -278.326, 856.599, 0, 0, 0, 0, -327.844, 828.04, 0, 0, 0, 0, -372.985, 792.633, 0, 0, 0, 0, -414.991, 754.866, 0, 0, 0, 0, -458.388, 722.304, 0, 0, 0, 0, -506.224, 696.757, 0, 0, 0, 0, -507.972, 614.032, 0, 0, 0, 0, -556.8, 592.932, 0, 0, 0, 0, -602.632, 565.909, 0, 0, 0, 0, -639.187, 528.782, 0, 0, 0, 0, -663.35, 481.952, 0, 0, 0, 0, -745.487, 473.1, 0, 0, 0, 0, -760.379, 418.022, 0, 0, 0, 0, -777.732, 365.973, 0, 0, 0, 0, -803.096, 317.968, 0, 0, 0, 0, -756.772, 245.89, 0, 0, 0, 0, -786.581, 201.96, 0, 0, 0, 0, -809.665, 154.452, 0, 0, 0, 0, -820.311, 103.629, 0, 0, 0, 0, -814.553, 51.2473, 0, 0, 0, 0, -1199.4, -3.85762e-13, 0, 0, 0, 0, -1180.18, -74.2506, 0, 0, 0, 0, -1163.51, -146.986, 0, 0, 0, 0, -1155.41, -220.406, 0, 0, 0, 0, -1149.26, -295.08, 0, 0, 0, 0, -1068.95, -347.322, 0, 0, 0, 0, -1056.42, -418.266, 0, 0, 0, 0, -1031.75, -485.504, 0, 0, 0, 0, -991.915, -545.31, 0, 0, 0, 0, -943.149, -598.541, 0, 0, 0, 0, -955.16, -693.965, 0, 0, 0, 0, -902.206, -746.37, 0, 0, 0, 0, -855.367, -803.243, 0, 0, 0, 0, -811.44, -864.096, 0, 0, 0, 0, -767.754, -928.055, 0, 0, 0, 0, -669.398, -921.348, 0, 0, 0, 0, -612.87, -965.729, 0, 0, 0, 0, -548.837, -998.331, 0, 0, 0, 0, -479.071, -1018.08, 0, 0, 0, 0, -407.96, -1030.39, 0, 0, 0, 0, -339.45, -1044.72, 0, 0, 0, 0, -293.42, -1142.8, 0, 0, 0, 0, -223.259, -1170.37, 0, 0, 0, 0, -151.54, -1199.56, 0, 0, 0, 0, -76.8193, -1221.01, 0, 0, 0, 0, -2.26059e-13, -1230.65, 0, 0, 0, 0, 51.7685, -822.837, 0, 0, 0, 0, 101.459, -803.129, 0, 0, 0, 0, 148.383, -777.851, 0, 0, 0, 0, 194.133, -756.097, 0, 0, 0, 0, 240.796, -741.094, 0, 0, 0, 0, 319.461, -806.866, 0, 0, 0, 0, 376.348, -799.78, 0, 0, 0, 0, 433.261, -788.099, 0, 0, 0, 0, 484.112, -762.839, 0, 0, 0, 0, 480.983, -662.016, 0, 0, 0, 0, 512.898, -619.987, 0, 0, 0, 0, 538.426, -573.366, 0, 0, 0, 0, 563.291, -528.966, 0, 0, 0, 0, 594.295, -491.643, 0, 0, 0, 0, 696.343, -505.923, 0, 0, 0, 0, 740.26, -469.783, 0, 0, 0, 0, 781.479, -429.621, 0, 0, 0, 0, 814.718, -383.377, 0, 0, 0, 0, 832.923, -329.778, 0, 0, 0, 0, 765.072, -248.587, 0, 0, 0, 0, 762.594, -195.801, 0, 0, 0, 0, 760.867, -145.143, 0, 0, 0, 0, 767.405, -96.9458, 0, 0, 0, 0, 780.71, -49.1181, 0, 0, 0, 0, 1000.89, 0)
}
point_count = 101

[sub_resource type="Gradient" id="Gradient_264po"]
colors = PackedColorArray(0.109804, 1, 0.137255, 1, 1, 0.129412, 0.113725, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1kice"]
gradient = SubResource("Gradient_264po")

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_l4ihi")

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = 513.0
offset_top = -144.0
offset_right = 618.0
offset_bottom = -125.0
theme_override_colors/font_color = Color(0.0980392, 0.313726, 0.752941, 1)
theme_override_fonts/font = ExtResource("2_nlliu")
theme_override_font_sizes/font_size = 8
text = "You collected X coins."
horizontal_alignment = 1
autowrap_mode = 2

[node name="GoatboyController" parent="." instance=ExtResource("8_vtaks")]
physics_interpolation_mode = 1
position = Vector2(-201, -1215)
scale = Vector2(0.124749, 0.124749)
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 3.14159
script = ExtResource("9_kvpfn")

[node name="Camera2D" type="Camera2D" parent="GoatboyController"]
position = Vector2(96.1932, 16.0322)
scale = Vector2(8.0161, 8.0161)
zoom = Vector2(4, 4)
limit_bottom = 100000000
limit_smoothed = true
position_smoothing_enabled = true

[node name="Path" type="Node" parent="."]

[node name="Platform" parent="Path" instance=ExtResource("3_cmfc3")]
position = Vector2(32, 9)

[node name="Platform2" parent="Path" instance=ExtResource("3_cmfc3")]
position = Vector2(370, 52)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path/Platform2"]
libraries = {
&"": SubResource("AnimationLibrary_xuk5v")
}
autoplay = "move"

[node name="Slime" parent="." instance=ExtResource("6_l0s6b")]
position = Vector2(529, 81)

[node name="Planet" type="Node2D" parent="."]

[node name="Pathwright" type="Node2D" parent="."]
script = ExtResource("11_kvpfn")
auto_generate = true
seed = 123
frequency_1 = 11.0
frequency_2 = 3.0
amplitude_1 = 25.0
amplitude_2 = 5.0
noise_strength = 1.0

[node name="GeneratedPath" type="Path2D" parent="Pathwright"]
texture_repeat = 2
curve = SubResource("Curve2D_264po")

[node name="PathRenderer" type="Node2D" parent="Pathwright"]
z_index = -1
texture_repeat = 2
script = ExtResource("12_dinhu")
texture = ExtResource("13_kvuet")
vertical_offset = -12.0
left_cap_texture = ExtResource("14_ca42v")
right_cap_texture = ExtResource("15_rysoc")

[node name="PathColliders" type="StaticBody2D" parent="Pathwright"]
script = ExtResource("14_trtic")

[node name="PathAnalyzer" type="Node2D" parent="Pathwright"]
script = ExtResource("16_264po")
curve_path = NodePath("../GeneratedPath")
color_gradient = SubResource("GradientTexture1D_1kice")

[node name="ShroomLvl1" parent="." instance=ExtResource("14_ir15t")]
position = Vector2(-112, -1243)

[node name="ShroomLvl2" parent="." instance=ExtResource("15_ir15t")]
position = Vector2(-502, -1046)

[node name="ShroomLvl3" parent="." instance=ExtResource("15_ir15t")]
position = Vector2(-434, -1059)
